# 1-2022-ICG-PaintClone

./: CMakeLists.txt  README.md
include/: EnumDrawShape.h  GlobalState.h  GlutPaint.h  ImGuiPaint.h  gpBezier.h  gpCircle.h  gpEllipse.h  gpLine.h  gpRectangle.h  gpShape.h  gpShape.hpp  gpTriangle.h  line.h  shape.h
lib/: freeglut_staticd.lib
src/: _main.cpp  main.cpp
src/demo/: imgui_main.cpp
